--- a/css/index.css
+++ b/css/index.css
@@ -359,7 +359,8 @@ canvas {
 
 .pricing {
   width: 100%;
-
+  height: auto;
+  margin-bottom: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
