--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  color: #212125;
 }
 
 body {
@@ -12,6 +13,8 @@ body {
     rgba(128, 128, 128, 0.397) 1px,
     transparent 1px
   );
+
+  scroll-behavior: smooth;
 }
 
 canvas {
@@ -438,7 +441,6 @@ main {
 }
 
 /* pricing */
-
 .pricing {
   max-width: 100%;
   height: fit-content;
@@ -446,12 +448,13 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-bottom: 200px;
+
   padding: 20px;
   padding-left: 50px;
-  padding-bottom: 200px;
 
+  position: relative;
   font-family: "Anek Tamil", sans-serif;
+  
 }
 
 .pricing > p {
@@ -462,15 +465,38 @@ main {
   text-align: center;
 }
 
+.pricing-mobile {
+  max-width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  padding: 20px;
+  padding-left: 50px;
+
+  position: relative;
+  font-family: "Anek Tamil", sans-serif;
+  display: none;
+}
+
+.pricing-mobile > p {
+  font-size: 1vw;
+}
+.pricing-introduction {
+  font-size: 5vw;
+  text-align: center;
+}
+
 .pricing-card {
-  width: 50%;
+  width: 80%;
   background-color: #f1eada;
   border-radius: 40px;
   border: 1px solid rgba(128, 128, 128, 0.397);
 
   padding: 40px;
 
-  position: sticky;
   z-index: 1;
 
   top: 0;
@@ -545,7 +571,7 @@ ul li::marker {
 }
 
 @media only screen and (max-width: 600px) {
-  .pricing {
+  .pricing-mobile {
     max-width: 100%;
 
     margin-bottom: 200px;
@@ -554,8 +580,9 @@ ul li::marker {
     padding-bottom: 200px;
 
     font-family: "Anek Tamil", sans-serif;
+    display: flex;
   }
-  .pricing > p {
+  .pricing-mobile > p {
     font-size: 5vw;
   }
 
@@ -594,11 +621,342 @@ ul li::marker {
   .btn-project {
     font-size: 3.5vw;
   }
+
+  .pricing-web {
+    display: none;
+  }
 }
 
-.smooth-scroll {
-  overflow: hidden !important;
+/* FOOTER */
+footer {
+  max-width: 100%;
+
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  font-family: "Anek Tamil", sans-serif;
+  border-top: 1px solid rgba(128, 128, 128, 0.397);
 }
 
+.work {
+  flex: 1;
 
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 8%;
+  padding-left: 20px;
+}
 
+.work h3 {
+  font-size: 3vw;
+}
+
+.work .mail {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  font-size: 1.5vw;
+}
+
+.work .mail a {
+  text-decoration: none; /* no underline */
+  color: #212125;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+}
+
+.hover-underline-animation::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #212125;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.menu {
+  flex: 1;
+
+  height: 100%;
+  display: flex;
+  padding-left: 5%;
+  padding-top: 2%;
+  padding-bottom: 5%;
+
+  position: relative;
+}
+
+.sections-go {
+  height: fit-content;
+
+  display: grid;
+  grid-template-columns: auto 1fr; /* Crea dos columnas de igual tamaño */
+  gap: 50px; /* Espacio entre las columnas */
+}
+
+.a-go {
+  font-size: 2vw;
+  font-weight: 500;
+  text-decoration: none; /* no underline */
+  color: #212125;
+}
+
+.son-footer {
+  position: absolute;
+  right: -200px;
+  bottom: -100px;
+}
+
+@media only screen and (max-width: 600px) {
+  footer {
+    max-width: 100%;
+    flex-direction: column;
+    height: 800px;
+  }
+
+  .work h3 {
+    font-size: 15vw;
+  }
+
+  .work .mail {
+    font-size: 5vw;
+  }
+
+  .a-go {
+    font-size: 5vw;
+    font-weight: 500;
+    text-decoration: none; /* no underline */
+    color: #212125;
+  }
+}
+
+/* carosuel */
+.carouselOfImages {
+  position: relative;
+  margin: auto;
+  overflow: visible;
+  width: 100%;
+}
+.gradient-left {
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to right, whitesmoke, transparent 100%);
+  margin-top: -270px;
+  height: 150px;
+  width: 8%;
+  content: "";
+}
+.gradient-right {
+  display: block;
+  position: relative;
+  float: right;
+  right: 0;
+  background-image: linear-gradient(to left, whitesmoke, transparent 100%);
+  margin-top: -150px;
+  height: 150px;
+  width: 8%;
+  content: "";
+}
+
+.carouselImage {
+  position: relative;
+  width: 20%;
+  height: 45px;
+  padding: 24px;
+  border: 1.5px solid black;
+  margin-right: 33px;
+  margin-top: 70px;
+  margin-bottom: 50px;
+  counter-increment: carousel-cell;
+  text-align: center;
+  vertical-align: center;
+  transition: transform 0.5s;
+  font-size: 1.2em;
+}
+@media only screen and (max-width: 1300px) {
+  .carouselImage {
+    width: 30%;
+  }
+}
+@media only screen and (max-width: 773px) {
+  .carouselImage {
+    width: 50%;
+  }
+}
+@media only screen and (max-width: 490px) {
+  .carouselImage {
+    width: 50%;
+    padding: 15px;
+  }
+}
+
+/*! Flickity v2.0.5
+https://flickity.metafizzy.co
+---------------------------------------------- */
+
+.flickity-enabled {
+  position: relative;
+}
+
+/* .flickity-enabled:focus { outline: none; } */
+
+.flickity-viewport {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.flickity-slider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* draggable */
+
+.flickity-enabled.is-draggable {
+  -webkit-tap-highlight-color: transparent;
+  /*           tap-highlight-color: transparent; */
+}
+
+.flickity-enabled.is-draggable .flickity-viewport {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+.flickity-viewport {
+  margin: 0px;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.slider {
+  width: 100%;
+  height: 550px;
+  overflow: hidden;
+
+  font-family: "Anek Tamil", sans-serif;
+}
+
+.slider-inner {
+  position: absolute;
+  top: 0;
+  width: fit-content;
+  height: fit-content;
+
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 50px;
+  pointer-events: none;
+  padding: 20px;
+}
+
+.slide-img > .pricing-card {
+  width: 1000px;
+  height: 450px;
+  background-color: #f1eada;
+  border-radius: 40px;
+  border: 1px solid rgba(128, 128, 128, 0.397);
+
+  padding: 40px;
+
+  z-index: 1;
+
+  top: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.slide-img > .pricing-card h4 {
+  font-size: 2vw;
+  font-weight: 700;
+}
+.slide-img > .pricing-card p {
+  font-size: 1vw;
+  font-weight: 500;
+}
+
+.slide-img > .pricing-card .first-pricing {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding-right: 20px;
+}
+.slide-img > .pricing-card .first-pricing h5 {
+  font-size: 3vw;
+}
+
+.slide-img > .pricing-card .first-pricing span {
+  font-size: 1.5vw;
+  font-weight: 500;
+}
+
+.slide-img > .pricing-card .second-pricing {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.slide-img > .pricing-card .second-pricing p {
+  font-size: 1.5vw;
+}
+.slide-img > .pricing-card .second-pricing span {
+  font-size: 1.5vw;
+  font-weight: 500;
+}
+
+.list-benefits {
+  padding: 30px;
+}
+.list-benefits .text {
+  font-size: 1.2vw;
+}
+ul li::marker {
+  content: "✔️";
+}
+
+.btn-project {
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 40px;
+  padding: 20px;
+  border: 1px solid rgba(128, 128, 128, 0.397);
+  transition: all 0.2s ease-in-out;
+
+  font-size: 1.2vw;
+}
+.btn-project:hover {
+  background-color: #52504e;
+  color: white;
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
+}
+
+@media only screen and (max-width: 600px) {
+  .slider {
+    display: none;
+  }
+}
