--- a/css/index.css
+++ b/css/index.css
@@ -627,7 +627,8 @@ ul li::marker {
 footer {
   max-width: 100%;
 
-  height: 400px;
+  height: 100dvh;
+  margin-bottom: 200px;
   display: flex;
   flex-direction: row;
   font-family: "Anek Tamil", sans-serif;
